# cli-pilot

./: Cargo.toml  LICENSE  README.md
src/: completion.rs  config.rs  main.rs  prompt.rs  state.rs
