[package]
name = "cli-pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
http = "0.2.9"
inquire = "0.6.1"
json = "0.12.4"
reqwest = "0.11.16"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.95"
spinners = "4.1.0"
termion = "2.0.1"
tokio = {version = "1.27.0", features = ["rt", "macros"]}
toml = "0.7.3"

[[bin]]
name = "gpt"
path = "src/main.rs"